Tailwind-Klassen direkt ins HTM geschrieben

--- a/index.html
+++ b/index.html
@@ -24,15 +24,6 @@
         font-family: 'Manrope', sans-serif;
         background-color: var(--background-light);
       }
-      .nav-link {
-        @apply text-sm font-medium text-[var(--text-dark)] transition-colors duration-300 hover:text-[var(--primary-color)];
-      }
-      .section-title {
-        @apply text-3xl font-bold text-[var(--text-dark)] tracking-tight sm:text-4xl;
-      }
-      .section-subtitle {
-        @apply text-lg text-[var(--text-light)] mt-4 max-w-2xl mx-auto;
-      }
     </style>
 </head>
 <body class="text-[var(--text-dark)]">
@@ -47,11 +38,11 @@
 <h1 class="text-xl font-bold tracking-tighter text-[var(--text-dark)]">ORBA ART SPACE</h1>
 </div>
 <nav class="hidden items-center gap-10 lg:flex">
-<a class="nav-link" href="#">Startseite</a>
-<a class="nav-link" href="#about">Über mich</a>
-<a class="nav-link" href="#courses">Kurse</a>
-<a class="nav-link" href="#gallery">Galerie</a>
-<a class="nav-link" href="#contact">Kontakt</a>
+<a class="text-sm font-medium text-[var(--text-dark)] transition-colors duration-300 hover:text-[var(--primary-color)]" href="#">Startseite</a>
+<a class="text-sm font-medium text-[var(--text-dark)] transition-colors duration-300 hover:text-[var(--primary-color)]" href="#about">Über mich</a>
+<a class="text-sm font-medium text-[var(--text-dark)] transition-colors duration-300 hover:text-[var(--primary-color)]" href="#courses">Kurse</a>
+<a class="text-sm font-medium text-[var(--text-dark)] transition-colors duration-300 hover:text-[var(--primary-color)]" href="#gallery">Galerie</a>
+<a class="text-sm font-medium text-[var(--text-dark)] transition-colors duration-300 hover:text-[var(--primary-color)]" href="#contact">Kontakt</a>
 </nav>
 <div class="flex items-center gap-2">
 <a class="hidden sm:inline-block rounded-lg px-5 py-2.5 text-sm font-semibold text-[var(--text-dark)] transition-colors duration-300 hover:bg-[var(--secondary-color)]" href="#">
@@ -87,8 +78,8 @@
 <section class="py-24 sm:py-32" id="about">
 <div class="container mx-auto px-6 lg:px-8">
 <div class="mx-auto max-w-3xl text-center">
-<h2 class="section-title">Über mich</h2>
-<p class="section-subtitle">
+<h2 class="text-3xl font-bold text-[var(--text-dark)] tracking-tight sm:text-4xl">Über mich</h2>
+<p class="text-lg text-[var(--text-light)] mt-4 max-w-2xl mx-auto">
                 Künstlerin und Lehrerin mit russischer Ausbildung und langjähriger Praxis in Deutschland. Hier trifft traditionelle Maltechnik auf die kreative Zukunft mit KI. Ich glaube fest daran, dass Kunst eine Brücke zwischen Welten schlägt – der analogen und der digitalen. Begleiten Sie mich auf dieser farbenfrohen Reise!
               </p>
 </div>
@@ -97,8 +88,8 @@
 <section class="bg-[var(--secondary-color)] py-24 sm:py-32" id="courses">
 <div class="container mx-auto px-6 lg:px-8">
 <div class="mx-auto max-w-2xl text-center mb-16">
-<h2 class="section-title">Unsere vielfältigen Kurse</h2>
-<p class="section-subtitle">Entdecken Sie die Vielfalt unserer kreativen Angebote und finden Sie Ihre Passion.</p>
+<h2 class="text-3xl font-bold text-[var(--text-dark)] tracking-tight sm:text-4xl">Unsere vielfältigen Kurse</h2>
+<p class="text-lg text-[var(--text-light)] mt-4 max-w-2xl mx-auto">Entdecken Sie die Vielfalt unserer kreativen Angebote und finden Sie Ihre Passion.</p>
 </div>
 <div class="grid grid-cols-1 gap-8 sm:grid-cols-2 lg:grid-cols-4">
 <div class="group flex flex-col items-center text-center p-8 bg-white rounded-xl shadow-sm transition-all duration-300 hover:shadow-2xl hover:-translate-y-2 border-b-4 border-transparent hover:border-[var(--accent-pink)]">
@@ -127,8 +118,8 @@
 <section class="py-24 sm:py-32" id="gallery">
 <div class="container mx-auto px-6 lg:px-8">
 <div class="mx-auto max-w-2xl text-center mb-16">
-<h2 class="section-title">Galerie-Highlights</h2>
-<p class="section-subtitle">Ein Schaufenster der Werke unserer talentierten Studenten und Dozenten.</p>
+<h2 class="text-3xl font-bold text-[var(--text-dark)] tracking-tight sm:text-4xl">Galerie-Highlights</h2>
+<p class="text-lg text-[var(--text-light)] mt-4 max-w-2xl mx-auto">Ein Schaufenster der Werke unserer talentierten Studenten und Dozenten.</p>
 </div>
 <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 lg:grid-cols-4 sm:gap-8">
 <div class="group relative overflow-hidden rounded-xl shadow-lg transition-shadow duration-300 hover:shadow-2xl">
@@ -177,8 +168,8 @@
 <section class="bg-[var(--secondary-color)] py-24 sm:py-32" id="contact">
 <div class="container mx-auto px-6 lg:px-8">
 <div class="mx-auto max-w-2xl text-center mb-16">
-<h2 class="section-title">Treten Sie mit uns in Kontakt</h2>
-<p class="section-subtitle">Haben Sie Fragen oder möchten Sie sich anmelden? Wir sind für Sie da.</p>
+<h2 class="text-3xl font-bold text-[var(--text-dark)] tracking-tight sm:text-4xl">Treten Sie mit uns in Kontakt</h2>
+<p class="text-lg text-[var(--text-light)] mt-4 max-w-2xl mx-auto">Haben Sie Fragen oder möchten Sie sich anmelden? Wir sind für Sie da.</p>
 </div>
 <form class="mx-auto max-w-xl">
 <div class="grid grid-cols-1 gap-x-8 gap-y-6 sm:grid-cols-2">
